--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 };
 
                 // Send data to backend
-                const response = await fetch("https://backend-cy7h.onrender.com/capture", {
+                const response = await fetch("https://backend-7q12.onrender.com/capture", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify(payload),
